feat: refactor and integration tests
